# DogRobot

./: README.md  requirement.txt
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/add_integers/lib/add_integers/: addition_client  addition_service
ros2_ws/install/add_integers/share/add_integers/: package.sh  package.xml
ros2_ws/install/can_node/lib/can_node/: can  listener  talker
ros2_ws/install/can_node/share/can_node/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/control/lib/control/: sim
ros2_ws/install/control/share/control/: package.sh  package.xml
ros2_ws/install/controller/lib/controller/: control  listener  talker
ros2_ws/install/controller/share/controller/: package.sh  package.xml
ros2_ws/install/custom_interfaces/share/custom_interfaces/: local_setup.sh  package.sh
ros2_ws/install/gamepad_node/lib/gamepad_node/: gamepad  joy
ros2_ws/install/gamepad_node/share/gamepad_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/my_launch_package/share/my_launch_package/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/wit_pkg/include/: readIMU
ros2_ws/install/wit_pkg/lib/: libserial.so.  libwit_c_sdk.so.  libwit_c_sdk.so.0.0.0
ros2_ws/log/: latest_build  latest_list
ros2_ws/src/add_integers/: setup.py
ros2_ws/src/add_integers/add_integers/: client_node.py
ros2_ws/src/can_node/: package.xml  setup.cfg  setup.py
ros2_ws/src/can_node/can_node/: canController.py  can_controller.py  convertAngle2Position.py  convertCoordinate.py  implement.py  subcriber.py
ros2_ws/src/controller/: package.xml  setup.py
ros2_ws/src/controller/controller/: can_controller.py  convertAngle2Position.py  convertGlobal2LocalCoordinate.py  gamepad.py  joy.py  kinematicRobot.py  move_control.py  quadrupedRobot.py  test.py
ros2_ws/src/custom_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/custom_interfaces/srv/: CANsrv.srv  IMU.srv
ros2_ws/src/gamepad_node/: setup.cfg  setup.py
ros2_ws/src/gamepad_node/gamepad_node/: gamepad.py
ros2_ws/src/my_launch_package/: package.xml  setup.py
ros2_ws/src/my_launch_package/my_launch_package/: launch.py
ros2_ws/src/simulation/: CMakeLists.txt
ros2_ws/src/simulation/urdf/: robot.urdf
ros2_ws/src/simulation_control/: setup.py
ros2_ws/src/simulation_control/control/: publish.py
ros2_ws/src/wit_pkg/: CMakeLists.txt
ros2_ws/src/wit_pkg/include/wit_pkg/: serial.h
ros2_ws/src/wit_pkg/src/: main.c  readIMU.c  readIMU.cpp  serial.c  wit_c_sdk.c
(+91 files in other folders)
